# SecretGallery

./: .gitignore  README.md
.trae/documents/: GoComicMosaic 前端项目改造计划.md  GoComicMosaic 最新改造计划.md  GoComicMosaic 项目改造计划.md
.trae/rules/: project_rules.md
frontend/: Caddyfile  Dockerfile  build-podman.sh  next.config.js  nginx.conf  package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/resources/: page.tsx
frontend/src/app/resources/[id]/: page.tsx
frontend/src/app/submit/: page.tsx
frontend/src/components/: FloatingButtons.tsx
frontend/src/services/: authService.ts  resourceService.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
rustbackend/: .env.example  Cargo.toml  reset_migrations.rs  reset_migrations_simple.rs
rustbackend/migrations/: 01_create_tables.sql  01_full_init.sql  02_ensure_tables.sql  02_full_init.sql  README.md
rustbackend/src/: db_test.rs  env_test.rs  main.rs  simple_db_test.rs  test_db.rs
rustbackend/src/api/: mod.rs  routes.rs
rustbackend/src/api/handlers/: auth_handlers.rs  health_handlers.rs  mod.rs  resource_handlers.rs
rustbackend/src/config/: mod.rs
rustbackend/src/crypto/: decode.rs  encode.rs  key_management.rs  mod.rs
rustbackend/src/database/: mod.rs  schema.rs
rustbackend/src/database/models/: encryption_key.rs  mod.rs  resource.rs  user.rs
rustbackend/src/service/: mod.rs  resource.rs
